--- a/media/manifest.json
+++ b/media/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "",
-    "start_url": "../BMW_Car_Configurator.html",
+    "start_url": "../BMW Car Model.html",
     "icons": [
         {
             "src": "android-chrome-192x192.png",
